TS-3871: VC Migration Can Lose Events.